Fix the wrapping of the title on the Digital Pack US page

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -262,7 +262,7 @@
       position: relative;
       border-top: 1px solid #fff;
       background: gu-colour(garnett-neutral-1);
-      color: #fff;    
+      color: #fff;
       .component-countdown__chip {
         padding-left: 10px;
         padding-right: 10px;
@@ -336,7 +336,7 @@
     }
 
     @include mq($from: leftCol) {
-      width: 580px;
+      width: 600px;
       font-size: 44px;
       line-height: 50px;
       margin-left: 12px;
